# transgenic

./: .gitignore  LICENSE  README.md  classifyGeneSignal.py  configuration_transgenic.py  devAlignGenerationLabelNumbers.py  environment.cpu.yml  environment.gb10.base.yml  environment.gb10.yml  environment.yml  finetune_AgroSegmentNT.py  gb10_install.txt  install_gb10.sh  modeling_HeynaTransgenic.py  modeling_transgenic.py  predict_transgenic.py  pyproject.toml  test_AgroSegmentNT.py  test_HyenaSegmentNT.py  testingAdjustCoords.py  testingHyena.py  testingNT.py  testingT5Hyena.py  tokenization_transgenic.py  trainBiLSTMRegressionHead.py  trainHyenaSegment.py  trainReinforce.py  train_hyena.py  train_transgenic.py  transgenic.py  utils_transgenic.py
TestSetPerformanceAnalysis/: binCDSGFF.py  binLengthGff.py  scrapeGFFCompare.py  splitAlternativeTranscripts.py  splitGFFbyCDScount.py
examples/: ATH_Chr4_gene.bed  README.md  Transgenic_MultiSequence.ipynb  Transgenic_SingleSequence.ipynb  Transgenic_SingleSequence_Colab.ipynb  Transgenic_SingleSequence_experiment.ipynb  ath_chr4_predict.gff  prompt_mode.py  run_all_genomes.sh
notes/: README.md  pubPlanning.md
revision/: .gitignore  AS_evaluation_revision_plan.md  README.md  environment.revision.yml
scripts/: check_system.sh  gff2gsf.py  install_ml_stack_gb10.sh  requirements.txt  test_sm120.py  test_torch_cuda_gb10.py
src/: run_genome_annotation.py
test/: testSingle_tomato.py  test_AgroSegmentNT.py  test_HyenaSegmentNT.py  testingAdjustCoords.py  testingHyena.py  testingHyenaCompletion.py  testingHyenaDual.py  (+4 more)
(+68 files in other folders)
