[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transgenic"
version = "0.1"
description = "Utilities to support modeling with TransGenic"
authors = [
  { name = "Johnny Lomas", email = "johnnylo245@gmail.com" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
