[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transgenic"
version = "0.1"
description = "Utilities to support modeling with TransGenic"
authors = [
  { name = "Johnny Lomas", email = "johnnylo245@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
